# better-tracing

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  justfile
benches/: enter.rs  filter.rs  filter_log.rs  fmt.rs
better-tracing-mock/: Cargo.toml  README.md
better-tracing-mock/src/: ancestry.rs  event.rs  expect.rs  field.rs  layer.rs  lib.rs  span.rs  subscriber.rs
better-tracing-mock/tests/: event_ancestry.rs  span_ancestry.rs
examples/: basic.rs  custom_formatter.rs  field_transforms.rs  kubernetes.rs  third_party_crates.rs  time_formats.rs
src/: lib.rs  prelude.rs  reload.rs
src/field/: mod.rs
src/filter/: filter_fn.rs  targets.rs
src/fmt/: fmt_layer.rs  mod.rs  span_hierarchy_test.rs  writer.rs
src/layer/: context.rs  mod.rs  transform.rs
src/registry/: extensions.rs  mod.rs
tests/: cached_layer_filters_dont_break_other_layers.rs  duplicate_spans.rs  event_enabling.rs  field_filter.rs  filter_log.rs  fmt_max_level_hint.rs  hinted_layer_filters_dont_break_other_layers.rs  layer_filter_interests_are_cached.rs  multiple_layer_filter_interests_cached.rs  option.rs  option_filter_interest_caching.rs  registry_max_level_hint.rs  registry_with_subscriber.rs  reload.rs  reload_max_log_level.rs  same_len_filters.rs  unhinted_layer_filters_dont_break_other_layers.rs  utils.rs  vec.rs  vec_subscriber_filter_interests_cached.rs
tests/env_filter/: main.rs  per_layer.rs
tests/layer_filters/: boxed.rs  combinators.rs  downcast_raw.rs  filter_scopes.rs  main.rs  option.rs  per_event.rs  targets.rs  vec.rs  (+1 more)
tracing-mock/: Cargo.toml
(+10 files in other folders)
