## BIG SCARY NOTE
# This Cargo.toml does not match the repo conventions YET
# Before releasing to crates.io: make it so!

[package]
name = "better-tracing-mock"
version = "0.1.0-beta.1"
authors = ["Eliza Weisman <eliza@buoyant.io>", "Hayden Stainsby <hds@caffeineconcepts.com>", "Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokio-rs/tracing"
homepage = "https://tokio.rs"
description = """
Utilities for testing `tracing` and crates that uses it.
"""
categories = ["development-tools::testing"]
keywords = ["tracing", "mock", "testing"]
edition = "2018"
rust-version = "1.65.0"

[dependencies]
tracing = { workspace = true, features = ["std", "attributes"] }
tracing-core = { workspace = true }
better-tracing = { workspace = true, features = ["registry"], optional = true }

# Fix minimal-versions; tokio-test fails with otherwise acceptable 0.1.0
tokio-stream = { version = "0.1.9", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
